tests/ui/g-route-policy-mismatch.stderr
error[E0080]: evaluation panicked: route scope recorded conflicting controller policy annotations
  --> tests/ui/g-route-policy-mismatch.rs:95:5
   |
95 | > = project(&ROUTE);
   |     ^^^^^^^^^^^^^^^ evaluation of `CONTROLLER` failed inside this call
   |
note: inside `project::<0, StepCons<SendStep<Role<0>, Role<0>, hibana::global::Message<hibana::global::LabelMarker<5>, GenericCapToken<UnitControl<149, 5, 7, 1024>>, CanonicalControl<UnitControl<149, 5, 7, 1024>>>>, StepCons<SendStep<Role<0>, Role<0>, hibana::global::Message<hibana::global::LabelMarker<6>, GenericCapToken<UnitControl<150, 6, 7, 1024>>, CanonicalControl<UnitControl<150, 6, 7, 1024>>>>, StepNil>>, MintConfig>`
  --> src/global/role_program.rs
   |
   |     let stamp = ProjectionSeal::<ROLE>::validate_and_stamp::<Steps, Mint>(program);
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: inside `hibana::global::compiled::seal::ProjectionSeal::<0>::validate_and_stamp::<StepCons<SendStep<Role<0>, Role<0>, hibana::global::Message<hibana::global::LabelMarker<5>, GenericCapToken<UnitControl<149, 5, 7, 1024>>, CanonicalControl<UnitControl<149, 5, 7, 1024>>>>, StepCons<SendStep<Role<0>, Role<0>, hibana::global::Message<hibana::global::LabelMarker<6>, GenericCapToken<UnitControl<150, 6, 7, 1024>>, CanonicalControl<UnitControl<150, 6, 7, 1024>>>>, StepNil>>, MintConfig>`
  --> src/global/compiled/seal.rs
   |
   |         let typestate = RoleTypestate::<ROLE>::from_summary(&summary);
   |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: inside `hibana::global::typestate::emit::<impl hibana::global::typestate::builder::RoleTypestate<0>>::from_summary`
  --> src/global/typestate/emit.rs
   |
   |         super::emit_walk::build_role_typestate::<ROLE>(view, view.as_slice())
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: inside `hibana::global::typestate::emit_walk::build_role_typestate::<0>`
  --> src/global/typestate/emit_walk.rs
   |
   |                         panic!("route scope recorded conflicting controller policy annotations");
   |                         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the failure occurred here
